Thymeleaf - 템플릿 수정(index)

--- a/src/main/resources/templates/presentation/fragments/fragment-dots.html
+++ b/src/main/resources/templates/presentation/fragments/fragment-dots.html
@@ -52,7 +52,7 @@
                                         </svg>
   <!-- END of SVG dots-->
 </div>
-<div class="dots-2"th:fragment="dots2">
+<div class="dots-2" th:fragment="dots2">
   <!-- SVG Dots-->
   <svg style="enable-background: new 0 0 191.6 1215.4" version="1.1"
        viewBox="0 0 191.6 1215.4" x="0px"
@@ -203,5 +203,6 @@
                                                   d="M1507.7,1268.6c-105-35-200-141-222-248c-43-206,163-412,369-369c155,32,275,190,260,339c-11,105-90,213-190,262        C1663.7,1281.6,1569.7,1288.6,1507.7,1268.6z"></path>
                                             </g>
                                         </svg>
+</div>
 </body>
 </html>
