--- a/src/main/resources/templates/presentation/index.html
+++ b/src/main/resources/templates/presentation/index.html
@@ -31,7 +31,7 @@
             <div class="profile bg-gradient-primary-to-secondary">
               <!-- TIP: For best results, use a photo with a transparent background like the demo example below-->
               <!-- Watch a tutorial on how to do this on YouTube (link)-->
-              <img alt="..." class="profile-img" src="assets/resize-pro.png"/>
+              <img alt="..." class="profile-img" src="/assets/profile-bumsu.png"/>
               <div th:replace="~{presentation/fragments/fragment-dots :: dots1}"></div>
               <div th:replace="~{presentation/fragments/fragment-dots :: dots2}"></div>
               <div th:replace="~{presentation/fragments/fragment-dots :: dots3}"></div>
