Thymeleaf - 템플릿 수정 (resume)

--- a/src/main/resources/templates/presentation/index.html
+++ b/src/main/resources/templates/presentation/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="kr" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="~{presentation/fragments/fragment-head :: head}"></div>
 <body class="d-flex flex-column h-100">
 <main class="flex-shrink-0">
