--- a/src/main/resources/templates/presentation/fragments/fragment-card-experience.html
+++ b/src/main/resources/templates/presentation/fragments/fragment-card-experience.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <body>
 <div class="card shadow border-0 rounded-4 mb-5" th:fragment="card(experience)">
   <div class="card-body p-5">
