--- a/src/main/resources/templates/presentation/fragments/fragment-list-skill.html
+++ b/src/main/resources/templates/presentation/fragments/fragment-list-skill.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <body>
 <div class="mb-0" th:fragment="list(skills, skillType)">
   <div class="d-flex align-items-center mb-4">
