--- a/src/main/resources/templates/presentation/index.html
+++ b/src/main/resources/templates/presentation/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html lang="kr" xmlns:th="http://www.thymeleaf.org">
-<div th:replace="~{presentation/fragments/fragment-head :: head}"></div>
-<body class="d-flex flex-column h-100">
-<main class="flex-shrink-0">
-  <!-- Navigation-->
-  <div th:replace="~{presentation/fragments/fragment-navigation :: navigation}"></div>
+<html lang="kr" th:replace="~{presentation/layouts/layout-main :: layout(~{::#content})}"
+      xmlns:th="http://www.thymeleaf.org">
+
+<main class="flex-shrink-0" id="content">
   <!-- Header-->
   <header class="py-5">
     <div class="container px-5 pb-5">
@@ -65,11 +63,4 @@
     </div>
   </section>
 </main>
-<!-- Footer-->
-<div th:replace="~{presentation/fragments/fragment-footer :: footer}"></div>
-<!-- Bootstrap core JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Core theme JS-->
-<script src="js/scripts.js"></script>
-</body>
 </html>
