--- a/src/main/resources/templates/presentation/resume.html
+++ b/src/main/resources/templates/presentation/resume.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<html lang="kr" xmlns:th="http://www.thymeleaf.org">
-<div th:replace="~{presentation/fragments/fragment-head :: head}"></div>
+<html lang="kr" th:replace="~{presentation/layouts/layout-main :: layout(~{::#content})}"
+      xmlns:th="http://www.thymeleaf.org">
 
-<body class="d-flex flex-column h-100 bg-light">
-<main class="flex-shrink-0">
-  <!-- Navigation-->
-  <div th:replace="~{presentation/fragments/fragment-navigation :: navigation}"></div>
+<main class="flex-shrink-0" id="content">
   <!-- Page Content-->
   <div class="container px-5 my-5">
     <div class="text-center mb-5">
@@ -53,11 +50,5 @@
     </div>
   </div>
 </main>
-<!-- Footer-->
-<div th:replace="~{presentation/fragments/fragment-footer :: footer}"></div>
-<!-- Bootstrap core JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Core theme JS-->
-<script src="js/scripts.js"></script>
-</body>
+
 </html>
