--- a/src/main/resources/templates/presentation/index.html
+++ b/src/main/resources/templates/presentation/index.html
@@ -13,7 +13,7 @@
             <div class="badge bg-gradient-primary-to-secondary text-white mb-4">
               <div class="text-uppercase">Java &middot; Kotlin &middot; Spring &middot; JPA</div>
             </div>
-            <div class="fs-3 fw-light text-muted">안녕하세요</div>
+            <div class="fs-3 fw-normal text-muted">안녕하세요</div>
             <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">개발하는 곰돌이 <br> 최범수입니다.</span>
             </h1>
             <div
