--- a/src/main/resources/templates/presentation/fragments/fragment-navigation.html
+++ b/src/main/resources/templates/presentation/fragments/fragment-navigation.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="kr" xmlns:th="http://www.thymeleaf.org">
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-white py-3" th:fragment="navigation">
   <div class="container px-5">
     <a class="navbar-brand" href="/"><span
-        class="fw-bolder text-primary">Bumsu</span></a>
+        class="fw-bolder text-primary">Bumsu's Portfolio</span></a>
     <button aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation"
             class="navbar-toggler" data-bs-target="#navbarSupportedContent"
